--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.mongodb.morphia</groupId>
+            <artifactId>morphia</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+
+        <dependency>
           <groupId>com.sparkjava</groupId>
 	      <artifactId>spark-core</artifactId>
 	      <version>1.1.1</version>
